<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_42dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
            android:id="@+id/Txt_Done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/Done"
            android:textColor="@color/white"
            android:textSize="@dimen/size_12dp" />

        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
            android:id="@+id/Dialog_Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.60"
            android:gravity="center"
            android:text="@string/Carat"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15dp"
            android:textStyle="bold" />

        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
            android:id="@+id/Txt_Back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:text="@string/Back"
            android:textColor="@color/white"
            android:textSize="@dimen/size_12dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/lout_caketype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/birthday_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_engagement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/engagement_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_photocake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/photo_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_marriagecake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/marriage_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_anniversarycake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/anniversary_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp">

                <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                    android:id="@+id/tv_functioncake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/function_cake"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rv_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>