<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.Users.DashboardActivity"
    tools:showIn="@layout/activity_dashboard"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/lout_birthcake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_birthday" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/birthday_cake" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lout_engagementcake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_engcake" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/engagement_cake"
                            android:textColor="@color/white" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/lout_photocake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_photocake" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/photo_cake" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lout_marricake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_weddingcake" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/marriage_cake" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/lout_anniversarycake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_anniversary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/anniversary_cake" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lout_functioncake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/size_5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_functioncake" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary_traparent"
                        android:gravity="center">

                        <videoplayer.vishcoder.com.kailashcakeshop.util.font.TextViewMedium
                            style="@style/TextviewDashboard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/function_cake" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>